--- a/coding/missionstyle.css
+++ b/coding/missionstyle.css
@@ -57,7 +57,7 @@
         border: 3px solid #FFD832;
     }
     
-    #second {
+    #mission2 {
         display: block;
         font-family: "Yumaro";
         margin-top: -15px;
