--- a/coding/style.css
+++ b/coding/style.css
@@ -4,7 +4,7 @@
 
     body {
         padding: 40px;
-        background-color: black;
+        background-color: #111111;
         color: white;
         font-family: "Roboto";
         font-weight: 100;
@@ -18,7 +18,7 @@
     }
 
     .logo {
-        width: 50%;
+        width: 60%;
         padding-top: 30%;
     }
     
