llinking and design changes

--- a/coding/style.css
+++ b/coding/style.css
@@ -75,7 +75,7 @@
         color: white;
         font-family: "Roboto";
         font-weight: 100;
-        font-size: 50px;
+        font-size: 40px;
     }
 
     input {
@@ -86,6 +86,7 @@
         width: 80%;
         color: white;
         padding-left: 10px;
+        margin-bottom: 30Px;
         font-size: 40px;
         font-family: "Roboto";
         color: #FAD25E;
@@ -259,7 +260,7 @@
 
     hr {
         float: left;
-        width: 30%;
+        width: 23%;
         margin-top: -45px;
         border: 3px solid #FFD832;
         margin-left: 10%;
@@ -294,7 +295,7 @@
         border: none;
         padding: 10px;
         font-family: "Roboto";
-        color: #FFD832;
+        color: #FFFFFF;
         text-align: justify;
         font-size: 30px;
 
@@ -368,9 +369,11 @@
 
     .descriptiontwo p {
         float: left;
-        padding-top: 20px;
+        padding-top: 10px;
         padding-bottom: 20px;
+        padding-left: 15px;
         font-size: 30px;
+        
 
     }
 
